--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
   "devDependencies": {
     "@eslint/js": "^9.26.0",
     "@types/express": "^5.0.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "dotenv": "^16.5.0",
     "eslint": "^9.26.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.1.0",
     "nodemon": "^3.1.10",
